White Gap fixed

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 html, body{
     overflow-x: hidden;
-    width: 98.75vw;
+    width: 100vw;
     scroll-behavior: smooth;
     margin: 0px;
     /* background-image: url('./public/FullbgWhite.png'); */
